--- a/src/pages/calculator/calculator-page.module.css
+++ b/src/pages/calculator/calculator-page.module.css
@@ -1,8 +1,8 @@
 .calculator-page {
-  padding: 100px 0;
+  padding: 50px 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fbb034;
-  background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
+  /* background-color: #fbb034; */
+  /* background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%); */
 }
